# RFDiffusion2_all_the_code

./: .gitignore  .gitmodules  .ruff.toml  .yapf_exclude  README.md  aa_model.py  analysis  atomize.py  cifutils  data  data_loader.py  datahub  experiments  features.py  fused_mpnn  guide_posts.py  ipd  mask_generator.py  model  openfold  parsers.py  pyproject.toml  pytest.ini  rf2aa  rf_score  run_inference.py  sasa.py  se3_flow_matching  setup.py  show.py  show_dataset.py  test_aa_model.py  test_dataset.py  test_inference.py  test_training_regression.py  test_utils.py  train_multi_deep.py
benchmark/: add_metrics.py  bench_07-26.json  chunkify_foldseek_pdb.py  cluster_pipeline_outputs.py  compile_metrics.py  foldseek_clustering.py  foldseek_pdb.py  mpnn_designs.py  pdb_to_params.py  per_design_metrics.py  pipeline.py  score_designs.py  sweep_hyperparam.py  thread_mpnn.py
ci/: check_test_results.py  checkout_submodules.sh  install_dependencies.sh  run_pytest.sh  run_ruff.sh
conditions/: v2.py
dev/: analyze.py  graft_native_motif.py  idealize_backbone.py  pymol.py  renumber_chains.py  show_bench.py  show_tip_pa.py  show_tip_row.py
goldens/: indep_compl-get_diffusion_mask_islands_any  indep_pdb_aa-get_diffusion_mask_simple_any  indep_sm_compl_covale-get_diffusion_mask_islands_partial_ligand_any  indep_sm_compl_covale-get_unconditional_diffusion_mask-bridge-gpbonds_any  indep_sm_compl_covale-get_unconditional_diffusion_mask-bridge_any  indep_sm_compl_covale-get_unconditional_diffusion_mask-weird_any  indep_sm_compl_covale-get_unconditional_diffusion_mask_any  indep_sm_compl_multi-get_unconditional_diffusion_mask_any  indep_sm_complex-get_closest_tip_atoms_any  (+3 more)
(+356 files in other folders)
